#9 y #21 Primeros pasos en la gestión de integraciones y canales
